2004-09-06  callum  <callum@spooky-possum.org>

	* gnomine.c (show_face): Remove debugging code and make the face
	change again (Fixes bug 151931).

2004-08-28  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c: Remove the explicit call to
	gtk_widget_set_size_request for the face button. This clips the
	image badly. Fixes bug #144801.

2004-08-17  callum  <callum@spooky-possum.org>

	* gnomine.c: Fix up the checking code for nmines so that we can't
	set nmines too high with gconf-editor.

2004-08-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (fill_score_list): Change the high score reporting to
	avoid a rounding error which could drop a second from the
	times. See bug #149549.

2004-07-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c: Fix memory leaks in the hint code (bug #146267).

2004-07-01  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am:
	* face*.xpm:
	* face*.png:	
	* gnomine.c: Replace the sort-of alpha blended faces with properly
	alpha-blended faces. Also move the focus border outside the
	button. This is all to try and improve the look of the face, see
	bug #144801.

2004-06-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c:
	* minefield.h: Draw the "wrong flag" cross in a scalable 
	manner.

2004-05-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (fill_score_list): Calculate times for the score 
	list correctly. The scores are not in hundredths of a second, 
	they are a decimal number of the form: minutes.seconds. Fixes
	bug #142716.

2004-05-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (show_scores): Further tweaks to the scores dialog.

2004-05-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c: Implemented the new scores dialog.

2004-04-26  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (about): Fix up the credits to include Richard's and
	Steve's contributions.
